package domain;
import java.time.LocalDateTime;
public class Invitation {
    private LocalDateTime when;
}
