package domain;

public class Ticket {
    private Long fee;
    public Long getFee() {
        return fee;
    }
}
