@startuml
Left to Right Direction
class Audience {
+ buyTicket(ticket)
+ giveTicket()
}

class Bag {
- amount
+ hasInvitation()
+ hasTicket()
+ setTicket(ticket)
+ minusAmount(amount)
+ plusAmount(amount)
+ getTicket()
}

class Invitation {
- when
}

class Ticket {
- fee
+ getFee()
}

class TicketSeller {
+ sellTicket(audience)
}

class TicketOffice {
- amount
+ getTicket()
+ minusAmount(amount)
+ plusAmount(amount)
}

class Theater {
+ enter(audience)
}

Audience --> Bag : bag


Bag --> Invitation : invitation
Bag --> Ticket : ticket


TicketSeller ..> Audience
Theater ..> Audience


TicketSeller --> TicketOffice : ticketOffice
TicketOffice --> Ticket : tickets


@enduml